# CSC-52081-Mario

./: .gitignore  README.md  create_environment.py  experiments.py  play_mario.py  plots.py  pyproject.toml  requirements.txt  results.pkl  wrappers.py
logs/symbolic_dqn_w1l1/DQN_2/: events.out.tfevents.1773708765.desk-arch.46658.0
logs/symbolic_ppo/PPO_1/: events.out.tfevents.1773672100.desk-arch.3085.0
logs/symbolic_ppo/PPO_2/: events.out.tfevents.1773675975.desk-arch.3085.1
logs/symbolic_ppo_world1_random/PPO_1/: events.out.tfevents.1773679904.desk-arch.31556.0
logs/symbolic_ppo_world1_random/PPO_2/: events.out.tfevents.1773689123.desk-arch.59388.0  events.out.tfevents.1773701567.desk-arch.1791.7  events.out.tfevents.1773710823.desk-arch.54496.0  events.out.tfevents.1773710974.desk-arch.54496.1
notebooks/: 01_pixel_dqn_train.ipynb  02_pixel_ppo_train.ipynb  03_symbolic_dqn_train.ipynb  04_symbolic_ppo_train.ipynb  05_evaluation.ipynb  06_visualizations.ipynb  07_custom_ddqn_train.ipynb  08_symbolic_dqn_train.ipynb  11_world1_random_start_train.ipynb  1_symbolic_dqn_w1l1_train.ipynb  2_pixel_ppo_w1l1_train.ipynb  3_symbolic_ppo_w1l1_train.ipynb  4_symbolic_ppo_transfer_w1l2_train.ipynb  5_symbolic_ppo_multitask_w1_train.ipynb  5_symbolic_ppo_world1_random_train.ipynb  6_symbolic_ppo_world1_random_train.ipynb
patches/: gym_bool8_numpy2.patch  gym_time_limit_compat.patch  nes_py_numpy2.patch  smb_env_numpy2.patch
presentation/: presentation.tex
report/: report.tex
src/: config.py
src/agents/: __init__.py  mario_net.py
src/utils/: __init__.py  callbacks.py  gym_utils.py  smb_utils.py
src/wrappers/: __init__.py  pixel_wrappers.py  ram_wrappers.py
tasks/: Task_1.md  Task_2.md  Task_3.md  Task_4.md  Task_5.md
tests/: debug_fireball_ram.py  play_interactive.py  test_base_env.py  test_ram_wrapper.py  test_video_comparison.py  visual_test.py
