[project]
name = "smb-rl-comparison"
version = "0.1.0"
description = "Comparative analysis of state representations in RL: pixels vs symbolic grid on Super Mario Bros"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}

dependencies = [
    "gym==0.25.1",
    "gym-super-mario-bros==7.4.0",
    "nes-py==8.2.1",
    "stable-baselines3==2.7.1",
    "torch>=2.0.0",
    "numpy==1.23.5",
    "pandas>=2.0.0",
    "matplotlib>=3.9.0",
    "tensorboard>=2.10.0",
    "opencv-python>=4.5.0",
    "pillow>=10.0.0",
    "pyglet==1.5.21",
    "tqdm>=4.60.0",
    "cloudpickle>=3.0.0",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    "numpy==1.23.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
